# PROJ

./: .azure-pipelines.yml  .cirrus.yml  .clang-format  .clang-format-ignore  .cvsignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .zenodo.json  404.md  AUTHORS  AUTHORS.md  CITATION  CITATION.cff  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Dockerfile  Dockerfile.deb-packager  Doxyfile  HOWTO-RELEASE  HOWTO-RELEASE.md  INSTALL  LICENSE.md  Makefile.am  Makefile.in  NEWS  NEWS.md  PJ_cart.c  Proj  README  README.md  TODO.TXT  (+43 more)
cmake/: CMakeLists.txt  Ccache.cmake  FileEmbed.cmake  FindSqlite3.cmake  Makefile.am  Makefile.in  Proj4Config.cmake  Proj4InstallPath.cmake  Proj4Mac.cmake  Proj4SystemInfo.cmake  Proj4Test.cmake  ProjConfig.cmake  ProjInstallPath.cmake  ProjMac.cmake  ProjReadme.cmake  ProjSystemInfo.cmake  ProjTest.cmake  ProjUtilities.cmake  ProjVersion.cmake  policies.cmake  proj.pc.cmake.in  proj.pc.in  proj_config.cmake.in  project-config-version.cmake.in  project-config.cmake.in  uninstall.cmake.in
data/: CH  CMakeLists.txt  IGNF  ITRF2000  ITRF2008  ITRF2014  ITRF2020  Makefile.am  README  crsjson.schema.json  db_consistency_check_toggle.cmake  deformation_model.schema.json  generate_all_sql_in.cmake  generate_equinor_db.cmake  generate_proj_db.cmake  install.in  makefile.vc  other.extra  proj.ini  projjson.schema.json  sql_equinor_filelist.cmake  sql_filelist.cmake  test27  test83  testIGNF  testdatumfile  testflaky  testntv2  testvarious  triangulation.schema.json
data/sql/: README.md  alias_name.sql  alias_name_old_epsg.sql  analyze_vacuum.sql  area.sql  axis.sql  commit.sql  compound_crs.sql  concatenated_operation.sql  concatenated_operation_step.sql  consistency_checks_triggers.sql  conversion.sql  conversion_triggers.sql  conversion_triggers_hand_written.sql  coordinate_operation.sql  coordinate_system.sql  crs.sql  customizations.sql  customizations_early.sql  deprecation.sql  diagram.xmi  ellipsoid.sql  emlid_patch.sql  engineering_crs.sql  engineering_datum.sql  esri.sql  extent.sql  final_consistency_checks.sql  geodetic_crs.sql  geodetic_datum.sql  geodetic_datum_ensemble_member.sql  grid_alternatives.sql  grid_alternatives_generated.sql  grid_alternatives_generated_noaa.sql  grid_transformation.sql  grid_transformation_custom.sql  helmert_transformation.sql  iau.sql  idnk.sql  ignf.sql  (+23 more)
data/sql_equinor/: unit_of_measure.sql
data/sql_equinor_oracle/: Oracle_Data_Script.sql:Zone.Identifier  axis.sql  coordinate_system.sql  ellipsoid.sql  prime_meridian.sql  unit_of_measure.sql
data/tests/: MD  alaska  egm96_15_downsampled.gtx  egm96_15_uncompressed_truncated.tif  fr_ign_RAGTBT2016.tif  nkgrf03vel_realigned_extract.tif  nkgrf03vel_realigned_extract_tiled_256x256.tif  nkgrf03vel_realigned_xy_extract.ct2  nkgrf03vel_realigned_z_extract.gtx  simple_model_degree_3d.json  simple_model_degree_3d_grid.tif  simple_model_degree_horizontal.json  simple_model_metre_3d.json  simple_model_metre_3d_geocentric.json  simple_model_metre_3d_grid.tif  simple_model_metre_horizontal.json  simple_model_metre_vertical.json  simple_model_metre_vertical_grid.tif  simple_model_polar.json  simple_model_polar.tif  simple_model_projected.json  simple_model_wrap_east.json  simple_model_wrap_east.tif  simple_model_wrap_west.json  simple_model_wrap_west.tif  subset_of_gr3df97a.tif  test_3d_grid_projected.tif  (+56 more)
examples/: CMakeLists.txt  EPSG_4326_to_32631.cpp  crs_to_geodetic.c  pj_init_test.c  pj_obs_api_mini_demo.c  pj_obs_api_test.c  pj_proj_test.c  proj_create_example.c  s45b.pol  val_def.demo
html/: CMakeLists.txt  faq.html  gen_parms.html  index.html  man_geod.html  man_pj_init.html  man_proj.html
nad/: CH  CMakeLists.txt  IGNF  ITRF2000  ITRF2008  ITRF2014  Makefile.am  Makefile.in  National_84_02_07_01.LICENSE.md  README  epsg  esri  makefile.vc  nad27  nad83  ntf_r93.gsb  other.extra  proj_outIGNF.dist  td_out.dist  test27  test83  testIGNF  testdatum  testdatumfile  testflaky  testntv2  testvarious  tv_out.dist  val_def.demo  world
proj/: .cvsignore  AUTHORS  CHANGE-LOG  CMakeLists.txt  ChangeLog  Doxyfile  HOWTO-RELEASE  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.guess  configure  configure.in  fixtimes.sh  libtool  makefile.vc  nmake.opt  proj.dox  proj.spec
scripts/: CMakeLists.txt  Oracle_FKey_Script.sql  Oracle_Table_Script.sql  PostgreSQL_Data_Script.sql:Zone.Identifier  PostgreSQL_FKey_Script.sql  PostgreSQL_Table_Script.sql  build_airocean_parameters.ipynb  build_airocean_parameters.py  build_db.py  build_db_create_ignf.py  build_db_create_ignf_from_xml.py  build_db_equinor.py  build_db_equinor_oracle.py  build_db_from_esri.py  build_db_from_iau.py  build_esri_projection_mapping.py  build_grid_alternatives_generated.py  build_grid_alternatives_generated_noaa.py  build_nadcon5_concatenated_operations.py  build_nrcan.py  build_wgs84_realizations_concatenated_operations.py  cppcheck.sh  create_c_api_projections.py  create_proj_symbol_rename.sh  detect_missing_include.sh  doxygen.sh  dump_exported_symbols.sh  emscripten-docker-build.sh  filter_lcov_info.py  fix_typos.sh  gen_html_coverage.sh  generate_breathe_friendly_general_doc.py  generate_itrf2020.py  grid_checks.py  install_bash_completions.cmake.in  projinfo-bash-completion.sh  reference_exported_symbols.txt  reformat.sh  reformat_cpp.sh  releasenotes.py  (+2 more)
src/: .cvsignore  4D_api.cpp  CMakeLists.txt  Makefile.am  Makefile.in  PJ_aea.c  PJ_aea.cpp  PJ_aeqd.c  PJ_aeqd.cpp  PJ_affine.c  PJ_affine.cpp  PJ_airy.c  PJ_airy.cpp  PJ_aitoff.c  PJ_aitoff.cpp  PJ_august.c  PJ_august.cpp  PJ_axisswap.c  PJ_axisswap.cpp  PJ_bacon.c  PJ_bacon.cpp  PJ_bertin1953.c  PJ_bertin1953.cpp  PJ_bipc.c  PJ_bipc.cpp  PJ_boggs.c  PJ_bonne.c  PJ_bonne.cpp  PJ_calcofi.c  PJ_calcofi.cpp  PJ_cart.c  PJ_cass.c  PJ_cass.cpp  PJ_cc.c  PJ_ccon.c  PJ_ccon.cpp  PJ_cea.c  PJ_cea.cpp  PJ_chamb.c  PJ_chamb.cpp  (+457 more)
test/: CMakeLists.txt  Makefile.am  catch.hpp  render_net.py  render_nets.sh
(+2171 files in other folders)
